# MediaEditor

./: .gitignore  .gitmodules  AudioClip.cpp  AudioClip.h  AudioRender.hpp  AudioRender_Impl_Sdl2.cpp  AudioRender_Impl_Sdl2.hpp  AudioTrack.cpp  AudioTrack.h  BackgroundTask.cpp  BackgroundTask.h  BaseToolkit.cpp  BaseToolkit.h  BgtaskSceneDetect.cpp  BgtaskVidstab.cpp  CMakeLists.txt  Event.cpp  Event.h  EventStackFilter.cpp  EventStackFilter.h  FFUtils.cpp  FFUtils.h  FFVideoFilter.cpp  FFVideoFilter.h  FFVideoTransformFilter.cpp  FontDescriptor.cpp  FontManager.h  FontManagerLinux.cpp  FontManagerMac.mm  FontManagerStub.cpp  FontManager_Fontconfig.cpp  GstToolkit.cpp  GstToolkit.h  ImGuiToolkit.cpp  ImGuiToolkit.h  ImGuiToolkit_NoGst.cpp  ImGuiToolkit_NoGst.h  ImSequencer.cpp  ImSequencer.h  LICENSE  (+76 more)
MediaCore/: CMakeLists.txt  README.md
MediaCore/include/: AudioEffectFilter.h  AudioRender.h  DebugHelper.h  MediaData.h  MediaParser.h  MultiTrackVideoReader.h  Overview.h  SubtitleClip.h  SubtitleStyle.h  SubtitleTrack.h  VideoClip.h  VideoTrack.h
MediaCore/src/: AudioClip.cpp  AudioEffectFilter_FFImpl.cpp  AudioRender_Impl_Sdl2.cpp  AudioTrack.cpp  ConditionalMutex.h  DebugHelper.cpp  FFUtils.cpp  FontDescriptor.cpp  FontManager_Fontconfig.cpp  HwaccelManager.cpp  ImageSequenceReader.cpp  MatUtils.cpp  MediaCore.cpp  MediaData.cpp  MediaEncoder.cpp  MediaParser.cpp  MediaReader.cpp  MultiTrackAudioReader.cpp  MultiTrackVideoReader.cpp  Overview.cpp  SharedSettings.cpp  SingleTrackVideoReader.cpp  Snapshot.cpp  SubtitleClip_AssImpl.cpp  SubtitleClip_AssImpl.h  SubtitleTrack.cpp  SubtitleTrack_AssImpl.cpp  SubtitleTrack_AssImpl.h  TextureManager.cpp  VideoBlender.cpp  VideoClip.cpp  VideoReader.cpp  VideoTrack.cpp  VideoTransformFilter.cpp  VideoTransformFilter_Base.h  VideoTransformFilter_FFImpl.cpp  VideoTransformFilter_VkImpl.cpp
MediaCore/test/: HwaccelManagerTest.cpp  MediaEncoderTest.cpp  MediaReaderTest.cpp  MultiTrackAudioReaderTest.cpp  MultiTrackVideoReaderTest.cpp  OverviewTest.cpp  SnapshotTest.cpp  SubtitleReaderTest.cpp  UnitTest.cpp
blueprintsdk/: CMakeLists.txt  README.md  version.h.in
blueprintsdk/include/: BluePrint.h  Debug.h  Document.h  Node.h  Pin.h  UI.h  Utils.h
blueprintsdk/src/: BluePrint.cpp  Context.cpp  Debug.cpp  Document.cpp  Icon.cpp  Node.cpp  Pin.cpp  UI.cpp  Utils.cpp
blueprintsdk/src/BuildInNodes/CommonNode/: CommentNode.h  DummyNode.h  GroupNode.h  ImMatExitPointNode.h  ImMatFilterEntryPointNode.h  ImMatFusionEntryPointNode.h  SystemEntryPointNode.h  SystemExitPointNode.h
blueprintsdk/src/BuildInNodes/SystemNode/: AdditionNode.h  BranchNode.h  ComparatorNode.h  CompareNode.h  ConstValueNode.h  CountNode.h  DateTimeNode.h  DigitalPrintNode.h  DivisionNode.h  FileSelectNode.h  FlipFlopNode.h  FloatCountNode.h  LoopNode.h  MultiplicationNode.h  SubtractionNode.h  SwitchNode.h  TimerNode.h  ToStringNode.h
blueprintsdk/test/: test.cpp
imgui/addon/BaseUtils/: CMakeLists.txt
imgui/addon/BaseUtils/Include/: BaseUtilsCommon.h  MatUtilsImVecHelper.h  MatUtilsVecTypeDef.h  ThreadUtils.h  TimeUtils.h
imgui/addon/BaseUtils/Src/: CpuUtils.cpp  FileSystemUtils.cpp  Logger.cpp  SimdOpt.cpp  ThreadUtils.cpp  TimeUtils.cpp
imgui/addon/Dither/: CMakeLists.txt
imgui/addon/Dither/inc/: libdither.h
imgui/addon/Dither/src/: dither_data.h  dither_dbs.cpp  dither_dotdiff.cpp  dither_dotdiff_data.h  dither_dotlippens.cpp  dither_dotlippens_data.h  dither_errordiff.cpp  dither_errordiff_data.h  dither_grid.cpp  dither_kallebach.cpp  dither_kallebach_data.h  dither_ordered.cpp  dither_ordered_data.h  dither_pattern.cpp  dither_pattern_data.h  dither_riemersma.cpp  dither_riemersma_data.h  dither_threshold.cpp  dither_varerrdiff.cpp  dither_varerrdiff_data.h  hash.cpp  hash.h  libdither.cpp  queue.cpp  queue.h  random.cpp  random.h
imgui/addon/Dither/test/: bmp.cpp  bmp.h  test.cpp
imgui/addon/ImMaskCreator/: CMakeLists.txt
imgui/addon/ImMaskCreator/Include/: ImMaskCreator.h  MatFilter.h  MatMath.h
imgui/addon/ImMaskCreator/Src/: BoxFilter.Simd.h  BoxFilter.cpp  Contour2Mask.cpp  Contour2Mask.h  ImMaskCreatorImpl.cpp  ImMaskCreatorTest.cpp  MatFilter.cpp  MatIo.cpp  MatMath.Simd.h  MatMath.cpp  Morph.Simd.h  Morph.cpp
imgui/addon/ImVulkanShader/: CMakeLists.txt  ImVulkanShader.cpp  ImVulkanShader.h  imvk_Cast_vulkan.cpp  imvk_Cast_vulkan.h  imvk_Packing_shader.h  imvk_allocator.cpp  imvk_command.cpp  imvk_gpu.cpp  imvk_gpu.h  imvk_image_mat.h  imvk_mat.h  imvk_mat_shader.h  imvk_pipeline.cpp  imvk_pipeline.h  imvk_pipelinecache.h  imvk_vulkan_header_fix.h
imgui/addon/ImVulkanShader/cmake/: FindSpirvTools.cmake  generater_shader_comp.cmake  precompile_shader_spv.cmake
imgui/addon/ImVulkanShader/filters/: Bilateral_shader.h  Brightness_shader.h  ColorInvert_shader.h  Contrast_shader.h  Contrast_vulkan.cpp  Dilation_shader.h  Dilation_vulkan.cpp  Erosion_shader.h  Erosion_vulkan.h  Exposure_shader.h  Filter2DS_shader.h  Filter2D_shader.h  Filter2D_vulkan.cpp  Gamma_shader.h  Gaussian_vulkan.cpp  Hue_shader.h  Hue_vulkan.h  Lut3D_shader.h  Lut3D_vulkan.cpp  Saturation_shader.h  Saturation_vulkan.cpp  USM_shader.h  USM_vulkan.cpp  USM_vulkan.h
imgui/addon/ImVulkanShader/internals/: AlphaBlending_shader.h  AlphaBlending_vulkan.h  Binary_shader.h  Binary_vulkan.cpp  ColorConvert_shader.h  ColorConvert_vulkan.cpp  ColorConvert_vulkan.h  Concat_shader.h  Concat_vulkan.cpp  CopyTo_shader.h  Copy_make_border_shader.h  Crop_shader.h  Expand_shader.h  Flip_shader.h  Flip_vulkan.cpp  OpacityFilter_shader.h  OpacityFilter_vulkan.cpp  Resize_shader.h  Resize_vulkan.cpp  Resize_vulkan.h  Substract_mean_normalize.cpp  Substract_mean_normalize.h  (+9 more)
imgui/addon/Potrace/: CMakeLists.txt
imgui/misc/cpp/: CMakeLists.txt  codewin.cpp  dir_iterate.cpp  dir_iterate.h  dlfcn_win.cpp  dlfcn_win.h  imgui_cpu.cpp  imgui_cpu.h  imgui_fft.cpp  imgui_fft.h  imgui_socket.cpp  imgui_socket.h  mman_win.cpp  mman_win.h
imgui/misc/imgui_vkshader/: CMakeLists.txt  ImVulkanShader.cpp  imvk_allocator.cpp  imvk_gpu.cpp  imvk_option.cpp  imvk_pipelinecache.cpp
(+1379 files in other folders)
